--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-validator": "^6.12.0",
     "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
