--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "sharp": "^0.29.0"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
